--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Documentation, Support or Contact</h3>
 
-<p>Check out our <a href="https://https://mohammadul.github.io/libPCD8544/doc">documentation</a> or contact Sk. Mohammadul Haque (<a href="https://github.com/mohammadul" class="user-mention">@mohammadul</a>) and we’ll help you sort it out.</p>
+<p>Check out our <a href="https://mohammadul.github.io/libPCD8544/doc">documentation</a> or contact Sk. Mohammadul Haque (<a href="https://github.com/mohammadul" class="user-mention">@mohammadul</a>) and we’ll help you sort it out.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/mohammadul/libPCD8544">Libpcd8544</a> is maintained by <a href="https://github.com/mohammadul">mohammadul</a>.</span>
