Added authors' names.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 
 <ol>
 <li>Sk. Mohammadul Haque (<a href="https://github.com/mohammadul" class="user-mention">@mohammadul</a>)</li>
+<li>Andre Wussow (Raspberry Pi original version) (<a href="https://github.com/binerry" class="user-mention">@binerry</a>)</li>
+<li>Limor Fried, Adafruit Industries (original version)</li>
 </ol>
 
 <h3>
